# SortAlgorithms

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
.github/workflows/: main.yml
include/: sort_algorithms.h
src/: main.cpp  sort_algorithms.inl
